bbss218/force-app/main/default/objects/Lead/fields/Email_Sequence_Completed__c.field-meta.xml
<CustomField>
    <fullName>Email_Sequence_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Sequence Completed</label>
    <type>Checkbox</type>
</CustomField>