bbss218/force-app/main/default/objects/Lead/fields/Email_Sequence_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Sequence_Start_Date__c</fullName>
    <label>Email Sequence Start Date</label>
    <type>Date</type>
</CustomField>