bbss218/force-app/main/default/objects/Lead/fields/High_Level_Requirements__c.field-meta.xml
<CustomField>
    <fullName>High_Level_Requirements__c</fullName>
    <label>High Level Requirements</label>
    <type>TextArea</type>
</CustomField>