bbss218/force-app/main/default/objects/Lead/fields/Last_Status_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Changed_Date__c</fullName>
    <label>Last Status Changed Date</label>
    <type>DateTime</type>
</CustomField>