bbss218/force-app/main/default/objects/Lead/fields/Last_Working_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Working_Status_Date__c</fullName>
    <label>Last Working Status Date</label>
    <type>DateTime</type>
</CustomField>