bbss218/force-app/main/default/objects/Lead/fields/Lead_Flag__c.field-meta.xml
<CustomField>
    <fullName>Lead_Flag__c</fullName>
    <formula>CASE(
    Status,
    &quot;New&quot;, IMAGE(&quot;/resource/grey&quot;, &quot;New&quot;, 15, 15) &amp; &quot;-New&quot;,
    &quot;Working&quot;, IMAGE(&quot;/resource/green&quot;, &quot;Working&quot;, 15, 15) &amp; &quot;-Working&quot;,
    &quot;Nurturing&quot;, IMAGE(&quot;/resource/yellow&quot;, &quot;Nurturing&quot;, 15, 15) &amp; &quot;-Nurturing&quot;,
    &quot;Unqualified&quot;, IMAGE(&quot;/resource/red&quot;, &quot;Unqualified&quot;, 15, 15) &amp; &quot;-Unqualified&quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Flag</label>
    <type>Text</type>
</CustomField>