bbss218/force-app/main/default/objects/Lead/fields/Lead_ID_custom__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID_custom__c</fullName>
    <formula>IF(
 Account__r.Name &lt;&gt; &apos;&apos;,
Account__r.Name &amp; &quot;-&quot; &amp; TEXT(YEAR(TODAY())) &amp; &quot;-&quot; &amp;  Lead_ID__c ,
&quot;None-&quot; &amp; TEXT(YEAR(TODAY())) &amp; &quot;-&quot; &amp; Lead_ID__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead ID</label>
    <type>Text</type>
</CustomField>