bbss218/force-app/main/default/objects/Lead/fields/Lead_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sub_Source__c</fullName>
    <label>Lead Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cold Calling</fullName>
            </value>
            <value>
                <fullName>Zoominfo</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>Customer Event</fullName>
            </value>
            <value>
                <fullName>Google AdWords</fullName>
            </value>
            <value>
                <fullName>Purchased List</fullName>
            </value>
            <value>
                <fullName>External Referral</fullName>
            </value>
            <value>
                <fullName>Sales Team</fullName>
            </value>
            <value>
                <fullName>Business Intelligence Portal</fullName>
            </value>
            <value>
                <fullName>LinkedIn Sales Navigator</fullName>
            </value>
            <value>
                <fullName>GSA/SAM</fullName>
            </value>
            <value>
                <fullName>GovWin IQ (FED)</fullName>
            </value>
            <value>
                <fullName>GovWin IQ (SLED)</fullName>
            </value>
            <value>
                <fullName>Gov Spend</fullName>
            </value>
            <value>
                <fullName>-New-</fullName>
                <isActive>false</isActive>
                <label>-New-</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>