bbss218/force-app/main/default/objects/Lead/fields/Mail_Type__c.field-meta.xml
<CustomField>
    <fullName>Mail_Type__c</fullName>
    <label>Mail Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSDS</fullName>
            </value>
            <value>
                <fullName>Data and AI ABM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>