bbss218/force-app/main/default/objects/Lead/fields/Opportunity_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Sub_Type__c</fullName>
    <label>Opportunity Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Opportunity_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project-Based- New Implementation/System Integration</fullName>
            </value>
            <value>
                <fullName>Project-Based-Application Development</fullName>
            </value>
            <value>
                <fullName>Project-Based-Cloud Migration</fullName>
            </value>
            <value>
                <fullName>Project-Based-Technology Upgrades / Migrations</fullName>
            </value>
            <value>
                <fullName>Retainer-Based-Managed Services Contract</fullName>
            </value>
            <value>
                <fullName>Retainer-Based-Infrastructure Setup and Support</fullName>
            </value>
            <value>
                <fullName>Retainer-Based-Disaster Recovery / Business Continuity</fullName>
            </value>
            <value>
                <fullName>Retainer-Based-Security Services (Cybersecurity)</fullName>
            </value>
            <value>
                <fullName>Staff Augmentation</fullName>
            </value>
            <value>
                <fullName>Fixed Capacity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>