bbss218/force-app/main/default/objects/Lead/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <label>Reason Code</label>
    <length>501</length>
    <type>LongTextArea</type>
</CustomField>