bbss218/force-app/main/default/objects/Lead/fields/Secondary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Phone__c</fullName>
    <label>Secondary Phone</label>
    <length>15</length>
    <type>Text</type>
</CustomField>