bbss218/force-app/main/default/objects/Lead/validationRules/Account_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;Working&quot;),
    ISPICKVAL(PRIORVALUE(Status), &quot;New&quot;),
    ISBLANK( Account__c)
)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>&quot;Approved Account is mandatory.&quot;</errorMessage>
</ValidationRule>