bbss218/force-app/main/default/objects/Lead/validationRules/First_Name_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(FirstName)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>First name is Required</errorMessage>
</ValidationRule>