bbss218/force-app/main/default/objects/Lead/validationRules/HighLevel_Requirment_for_Converted.validationRule-meta.xml
<ValidationRule>
    <fullName>HighLevel_Requirment_for_Converted</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISCHANGED(IsConverted),
  IsConverted,
  ISBLANK(High_Level_Requirements__c),
  NOT(ISPICKVAL(Opportunity_Type__c, &quot;&quot;)),
  NOT(ISPICKVAL(Opportunity_Sub_Type__c, &quot;&quot;))
)</errorConditionFormula>
    <errorMessage>&quot;High-Level Requirements must be filled in before converting the Lead.&quot;</errorMessage>
</ValidationRule>