bbss218/force-app/main/default/objects/Lead/validationRules/Prevent_Manual_Lead_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Manual_Lead_Change</fullName>
    <active>false</active>
    <errorConditionFormula>CASE(TEXT(PRIORVALUE(Status)),
    &quot;New&quot;, 1,
    &quot;Working&quot;, 2,
    &quot;Nurturing&quot;, 3,
    &quot;Unqualified&quot;, 4,
    &quot;Converted&quot;, 5,
    0
) &gt; 
CASE(TEXT(Status),
    &quot;New&quot;, 1,
    &quot;Working&quot;, 2,
    &quot;Nurturing&quot;, 3,
    &quot;Unqualified&quot;, 4,
    &quot;Converted&quot;, 5,
    0
)</errorConditionFormula>
    <errorMessage>Lead Stage cannot be changed to an earlier stage.</errorMessage>
</ValidationRule>