bbss218/force-app/main/default/objects/Lead/validationRules/Prevent_Skip_New_To_Converted.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Skip_New_To_Converted</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(PRIORVALUE(Status)) = &quot;New&quot; &amp;&amp;
TEXT(Status) = &quot;Converted&quot;</errorConditionFormula>
    <errorMessage>You cannot move a Lead directly from New to Converted.</errorMessage>
</ValidationRule>