bbss218/force-app/main/default/objects/Lead/validationRules/PrimaryPhone_required_moving.validationRule-meta.xml
<ValidationRule>
    <fullName>PrimaryPhone_required_moving</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;Working&quot;),
    ISBLANK( Primary_Phone__c )
)</errorConditionFormula>
    <errorDisplayField>Primary_Phone__c</errorDisplayField>
    <errorMessage>is required before moving the Lead to Working status.</errorMessage>
</ValidationRule>