bbss218/force-app/main/default/objects/Lead/validationRules/Require_LeadSource_Subsource_Working.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_LeadSource_Subsource_Working</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;Working&quot;),
    OR(
        ISBLANK(TEXT(LeadSource)),
        ISBLANK(TEXT(Lead_Sub_Source__c))
    )
)</errorConditionFormula>
    <errorMessage>&quot;Lead Source and Subsource must be filled before moving to Working status.&quot;</errorMessage>
</ValidationRule>