bbss218/force-app/main/default/objects/Lead/validationRules/Require_Reason_Code_for_Nurturing.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Reason_Code_for_Nurturing</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status, &quot;Nurturing&quot;),
ISBLANK(  Reason_Code__c )
)</errorConditionFormula>
    <errorDisplayField>Reason_Code__c</errorDisplayField>
    <errorMessage>is mandatory when moving Stage from Working to Nurturing.</errorMessage>
</ValidationRule>