bbss218/force-app/main/default/objects/Lead/validationRules/Unqualified_Reason_Code_for_UnQualified.validationRule-meta.xml
<ValidationRule>
    <fullName>Unqualified_Reason_Code_for_UnQualified</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status, &quot;Unqualified&quot;),
ISBLANK(   Unqualified_Reason__c )
)</errorConditionFormula>
    <errorDisplayField>Unqualified_Reason__c</errorDisplayField>
    <errorMessage>is mandatory when moving Stage from Nurturing to Unqualified.</errorMessage>
</ValidationRule>