bbss218/force-app/main/default/objects/Lead/validationRules/Validate_HLR_AND_Opportunity_Sub_Types_O.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_HLR_AND_Opportunity_Sub_Types_O</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(IsConverted),
IsConverted,
ISBLANK(High_Level_Requirements__c),
NOT(ISPICKVAL(Opportunity_Type__c, &quot;&quot;)),
ISPICKVAL(Opportunity_Sub_Type__c, &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>&quot;Please select High Level Requirments and Opportunity Sub-Type before converting the Lead.&quot;</errorMessage>
</ValidationRule>