bbss218/force-app/main/default/objects/Lead/validationRules/Validate_Opportunity_Sub_Types_On_Conver.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Opportunity_Sub_Types_On_Conver</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(IsConverted),
IsConverted,
NOT(ISBLANK(High_Level_Requirements__c)),
NOT(ISPICKVAL(Opportunity_Type__c, &quot;&quot;)),
ISPICKVAL(Opportunity_Sub_Type__c, &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>&quot;Please select Opportunity Sub-Type before converting the Lead.&quot;</errorMessage>
</ValidationRule>